# CMakeDemo

./: CMakeLists.txt  ReadMe.txt  hello_cmake.cpp
Hierarchal/: CMakeLists.txt
